WIP: moderation reviews user and course lookup